# zephy_min_mqtt_broker

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  Dockerfile.build  Dockerfile.env  Kconfig  LICENSE  Makefile.linux  NOTICE.md  README.md  VERSION  deps.json  docker-build.sh  install_env.sh  prj.conf  prj.conf.template  repo.json  run_dashboard.sh  setup.sh
docs/: field_bridge_scenario.md  mesh_test_matrix.md  module_structure.md  optimization_loop.md  p2p_shard_model.md  product_dependency_model.md  readme_legacy.md  release_notes.md  repository_split_plan.md  todo.md  todo.yaml
include/: broker.h  client.h  http.h  p2p.h  p2p_shard.h  packet.h  session.h  topic.h  wifi.h
platform/: platform.h
scripts/: audit_packet_buffers.sh  bench_esp32_workload.sh  bench_p2p_docker_scale.sh  bench_p2p_scale.sh  cleanup_logs.sh  mesh_test_matrix.sh  run_all_tests.sh  test_admission_fallback.sh  test_auth.sh  test_broker.sh  test_compliance.sh  test_connack_unavail.sh  test_connect_edge.sh  test_dashboard.sh  test_fallback_ingress_qos.sh  test_inflight_retry.sh  test_keepalive.sh  test_large_payload.sh  test_lwt.sh  test_malformed.sh  test_p2p_dynamic.sh  test_p2p_static_chain.sh  test_p2p_static_seeds_only.sh  test_qos2.sh  test_session.sh  test_session_qos2.sh  test_stress.sh  test_unsub.sh  test_with_testkit.sh  test_zephyr_module.sh
src/: broker.c  client.c  http.c  main.c  p2p_discover.c  p2p_election.c  p2p_peer.c  p2p_router.c  p2p_shard.c  packet.c  session.c  topic.c  wifi.c
tests/: fallback_listener_broker.c  keepalive_client.c  lwt_client.c  unit_packet.c  (+5 more)
(+8 files in other folders)
